# texas-gerrymandering-hb4

./: .gitattributes  LICENSE  Makefile  README.md  etl_pipeline.py  pyproject.toml  requirements.txt
code/datasets/: 01_eda_district_shpfile.ipynb  02_clean_census_data.ipynb  02_convert_census_data.ipynb  02_eda_census_data.ipynb  03_clean_census_shpfile.ipynb  03_eda_census_shpfile.ipynb  04_clean_vtd_election_results.ipynb  04_eda_vtd_election_results.ipynb  05_clean_vtd_shapefile.ipynb  05_eda_vtd_shapefile.ipynb  06_eda_final_dataset.ipynb  07_generate_racial_maps.ipynb  07_merge_vtds_datasets.ipynb  generate_racial_maps.ipynb
code/gingles/: 01_config.ipynb  02_features.ipynb  03_bayes_ei.ipynb  04_ensemble.ipynb  05_scoring.ipynb  06_mechanisms.ipynb  07_reporting.ipynb  bayes_ei.ipynb
data/interim/: census_demographics.duckdb  clean_vtd_election_results.csv  texas_census_blocks_clean.gpkg  vtds_geo_clean.gpkg
data/warehouse/: warehouse.db
docs/: mkdocs.yml
docs/docs/: bayesian.md  code.md  data.md  index.md  models.md  references.md
notebooks/: 01_clean_district_shpfile.ipynb  02-clean-vtd-shapefile.ipynb  02_clean_census_data.ipynb  04_clean_vtd_election_results.ipynb  05-clean-vtd-shapefile.ipynb
notebooks/ensemble_generation/: ensemble_generation.ipynb
pipelines/data/: cli.py  demographics.py  districts.py  elections.py  etl_pipeline.py  io.py  keys.py
pipelines/ensembles/: generate_recom_ensemble.py
tests/: test_etl_pipeline.py  test_linear_regression.py
texas_gerrymandering_hb4/: __init__.py  config.py  dataset.py  features.py  plots.py
(+384 files in other folders)
