[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "texas_gerrymandering_hb4"
version = "0.0.1"
description = "An Illinois Institute study analyzing race-based gerrymandering in Texas as a result of HB4."
authors = [
  { name = "Algorithmic Programmer" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["texas_gerrymandering_hb4"]
include = ["pyproject.toml", "texas_gerrymandering_hb4/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["texas_gerrymandering_hb4"]
force-sort-within-sections = true

